# ahda

./: CMakeLists.txt  Cargo.toml  README.md  build.rs
src/: cli.rs  errors.rs  format.rs  lib.rs  main.rs  pack.rs  parser.rs  unpack.rs
src/compression/: gzwrapper.rs  mod.rs  roaring.rs  roaring32.rs  roaring64.rs
src/cxx_api/: mod.rs
src/decoder/: bitmap.rs  bitmap_decoder.rs  mod.rs  roaring_bitmaps.rs  unpack_roaring.rs
src/encoder/: bitmap_encoder.rs  mod.rs  pack_roaring.rs
src/headers/: block.rs  file.rs  mod.rs
src/parser/: ahda_tsv.rs  bifrost.rs  fulgor.rs  metagraph.rs  mod.rs  sam.rs  themisto.rs
src/printer/: ahda_tsv.rs  bifrost.rs  fulgor.rs  metagraph.rs  mod.rs  sam.rs  themisto.rs
