[package]
name = "ahda"
version = "0.1.0"
edition = "2021"
authors = [
    "Tommi Mäklin <tommi@maklin.fi>",
]
description = "Pseudoalignment compression and conversion between formats."
readme = "README.md"
homepage = "https://github.com/tmaklin/ahda"
repository = "https://github.com/tmaklin/ahda"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ahda"
path = "src/main.rs"

[dependencies]
## core
bincode = "2"
bitmagic = { path = "vendor/bitmagic-rs" }
clap = { version = "4", features = ["derive"]}
needletail = { version = "0.6", default-features = false, features = ["flate2"] }
stderrlog = "0.6"

[profile.release]
debug = true
