[package]
name = "ahda"
version = "0.1.0"
edition = "2021"
authors = [
    "Tommi Mäklin <tommi@maklin.fi>",
]
description = "Pseudoalignment compression and conversion between formats."
readme = "README.md"
homepage = "https://github.com/tmaklin/ahda"
repository = "https://github.com/tmaklin/ahda"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ahda"
path = "src/main.rs"

[dependencies]
## core
bincode = "2"
clap = { version = "4", features = ["derive"]}
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
needletail = { version = "0.6", default-features = false, features = ["flate2"] }
roaring = "0.11"
stderrlog = "0.6"

## .sam formatting
bstr = "1.12"
indexmap = "2.11"
noodles-sam = "0.78"

## C++ API
cxx = { version = "1.0" }

[build-dependencies]
cxx-build = { version = "1.0" }

[profile.release]
debug = true
